initial files added + working station ready

--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+     <meta charset="UTF-8">
+     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+     <meta name="description" content="With us, Travel to new beaches; Embrace new dreams" />
+     <meta name="author" content="JessxIam" />
+     <title>Sunny Days</title>
+
+     <!-- fonts Barrio + Pacifico + Alegreya-->
+     <link rel="preconnect" href="https://fonts.googleapis.com" />
+     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+     <link href="https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@0,400;1,400;1,500;1,700&family=Barrio&family=Pacifico&display=swap" rel="stylesheet" />
+
+
+     <link rel="shortcut icon" href="assets/img/logo/3.png" type="image/x-icon" />
+     <link rel="stylesheet" href="css/main.css" />
+</head>
+
+<body>
+     <h1>Echo Test</h1>
+</body>
+
+</html>
