additional primary files added template.css + normalize.css. CDN link to remixicon added

--- a/index.html
+++ b/index.html
@@ -7,20 +7,30 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
      <meta name="description" content="With us, Travel to new beaches; Embrace new dreams" />
      <meta name="author" content="JessxIam" />
+
      <title>Sunny Days</title>
+
+     <link rel="shortcut icon" href="assets/img/logo/4.png" type="image/x-icon" />
+
+     <!-- remix icons pack -->
+     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet" />
+
 
      <!-- fonts Barrio + Pacifico + Alegreya-->
      <link rel="preconnect" href="https://fonts.googleapis.com" />
      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
      <link href="https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@0,400;1,400;1,500;1,700&family=Barrio&family=Pacifico&display=swap" rel="stylesheet" />
 
+     <!-- stylesheets -->
+     <link rel="stylesheet" href="css/normalize.css" />
+     <link rel="stylesheet" href="css/template.css" />
 
-     <link rel="shortcut icon" href="assets/img/logo/3.png" type="image/x-icon" />
      <link rel="stylesheet" href="css/main.css" />
 </head>
 
 <body>
      <h1>Echo Test</h1>
+     <img src="assets/img/logo/3.png" alt="">
 </body>
 
 </html>
